# Ant_Old

./: .gitignore  INSTALL.md  NOTICE  README.md  build.bat  build.sh
cmake/: CMakeLists.txt  ant_engine-config-version.cmake.in  ant_engine-config.cmake  ant_engine.pc.in
include/: ant.h
src/: CMakeLists.txt  application.cpp  application.h
src/core/: CMakeLists.txt  common.h  compiler_definitions.h  debug.h  dll_definitions.h  fixed_int.h  memory.h
src/core/containers/: CMakeLists.txt  string.h
src/core/debug/: CMakeLists.txt  assert.cpp  assert.h  logger.h
src/core/memory/: Block.h  CMakeLists.txt  StackAllocator.cpp  StackAllocator.h  allocators.h  block.h  fallbackallocator.cpp  fallbackallocator.h  mallocator.cpp  mallocator.h  poolallocator.cpp  poolallocator.h  segregator.cpp  segregator.h  shared_ptr.h  stackallocator.cpp  stackallocator.h  unique_ptr.h
src/core/platform/: CMakeLists.txt  ant_unix.h  ant_windows.h
src/core/utility/: CMakeLists.txt  cstring_utility.h  type_traits.h  utility.h
